@@ -1,6 +1,6 @@
 ## This file is part of the YAZ toolkit.
 ## Copyright (C) 1995-2007, Index Data, All rights reserved.
-## $Id: Makefile.am,v 1.63 2007-04-18 08:08:02 adam Exp $
+## $Id: Makefile.am,v 1.64 2007-04-25 20:52:19 adam Exp $
 
 YAZ_VERSION_INFO=3:0:0
 
@@ -85,7 +85,7 @@ libyaz_la_SOURCES=version.c options.c log.c \
   otherinfo.c pquery.c sortspec.c charneg.c initopt.c \
   zoom-c.c zoom-socket.c zoom-opt.c zoom-p.h \
   grs1disp.c zgdu.c soap.c srw.c srwutil.c \
-  opacdisp.c cclfind.c ccltoken.c cclerrms.c cclqual.c cclptree.c \
+  opacdisp.c cclfind.c ccltoken.c cclerrms.c cclqual.c cclptree.c cclp.h \
   cclqfile.c cclstr.c cclxmlconfig.c \
   cql.y cqlstdio.c cqltransform.c cqlutil.c xcqlutil.c cqlstring.c \
   cqlstrer.c querytowrbuf.c \
